--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "firebase": "^9.19.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-excel-renderer": "^1.1.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "read-excel-file": "^5.6.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
