--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,5 @@
 {
   "hosting": {
-    "site": "lesson-plan-creator",
     "public": "build",
     "ignore": [
       "firebase.json",
@@ -13,5 +12,24 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ]
+    }
+  ],
+  "storage": {
+    "rules": "storage.rules"
   }
 }
