--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.2.1",
     "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
+    "firebase-functions": "^4.2.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
