--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "read-excel-file": "^5.6.1",
+    "svg-to-dataurl": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
