--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-shepherd": "^4.2.0",
     "read-excel-file": "^5.6.1",
     "svg-to-dataurl": "^1.0.0",
     "sweetalert": "^2.1.2",
