--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "firebase": "^9.19.1",
     "firebase-admin": "^11.6.0",
     "firebase-functions": "^4.2.1",
+    "intro.js": "^7.0.1",
+    "intro.js-react": "^0.7.1",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -18,7 +20,6 @@
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
-    "react-shepherd": "^4.2.0",
     "read-excel-file": "^5.6.1",
     "svg-to-dataurl": "^1.0.0",
     "sweetalert": "^2.1.2",
