--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-excel-renderer": "^1.1.0",
     "react-icons": "^4.8.0",
     "react-intersection-observer": "^9.4.3",
+    "react-joyride": "^2.5.4",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "read-excel-file": "^5.6.1",
