--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+.firebaserc
+firestore.indexes.json
+firestore.rules
+storage.rules
 
 # dependencies
 /node_modules
